src/test/ui/nll/mir_check_cast_unsize.stderr
error: lifetime may not live long enough
  --> $DIR/mir_check_cast_unsize.rs:8:5
   |
LL | fn bar<'a>(x: &'a u32) -> &'static dyn Debug {
   |        -- lifetime `'a` defined here
LL |     x
   |     ^ returning this value requires that `'a` must outlive `'static`

error: aborting due to previous error

